aks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__-service
  namespace: "__NAMESPACE__"
  labels:
    app: "__APP_NAME__"

spec:
  type: ClusterIP
  selector:
    app: "__APP_NAME__"
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
